syntax = "proto3";

package edustate.v1;

import "google/api/annotations.proto";

option go_package = "api/edustate/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.edustate.v1";
option java_outer_classname = "EdustateProtoV1";

service Analysis {
  rpc Analyze (AnalyzeRequest) returns (AnalyzeReply) {
    option (google.api.http) = {
      post: "/edustate/api/v1/analysis/analyze",
      body: "*"
    };
  }
}

message AnalyzeRequest {
  string student_nl_input = 1;
}

message AnalyzeReply {
  string result_summary = 1;
  repeated string suggestions = 2;
}